# Arwing

./: .gitignore  Cargo.toml  README.md  flake.nix  out.json
.github/workflows/: Build.yml  Release.yml  rust.yml
arwing_cli/: Cargo.toml
arwing_cli/src/: main.rs
arwing_core/: Cargo.toml
arwing_core/src/: characters.rs  interaction.rs  lib.rs
arwing_gui/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
arwing_gui/src/: App.tsx
arwing_gui/src-tauri/: Cargo.toml  tauri.conf.json
arwing_gui/src-tauri/capabilities/: migrated.json
arwing_gui/src-tauri/src/: main.rs
arwing_gui/src/common-components/: select.tsx  spinner.tsx
arwing_gui/src/consts/: characters.tsx  index.tsx  moves.tsx
arwing_gui/src/fixed-components/: interaction-row.tsx  interaction.tsx
src/: lib.rs  main.rs
